--- a/src/app/novopaciente/novopaciente.component.html
+++ b/src/app/novopaciente/novopaciente.component.html
@@ -1,8 +1,5 @@
 <nav class="navbar">
-    <div class="relative-container">
-        <img src="/assets/logofisio.png" alt="MinhaConta" class="logoFisio">
-        <span class="tituloFisioterapia">Fisioterapia</span>
-    </div>
+    <a class="navbar-brand">Minha conta</a>
     <span class="separator"></span>
     <a class="navbar-brand" id="dashboard">Meu dashboard</a>
     <a class="navbar-brand ml-auto">Administrador <span class="arrow-down"></span></a>
